--- a/src/app/components/acercade/acercade.component.html
+++ b/src/app/components/acercade/acercade.component.html
@@ -1,17 +1,21 @@
 <div class="row">
+
+    <button type="button" class="btn btn-primary" routerLink="/editacercade/1" *ngIf="isLogged">
+        Editar Persona
+    </button>
+
+
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/img/profile-photo.jpg" class="img-fluid" id="fotodeperfil">
+        <img src="{{persona.img}}" class="img-fluid" id="fotodeperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p id="nombre">Isaias Zacur</p>
+        <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
         <p>Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de Mi</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Pariatur earum ratione veniam debitis aperiam blanditiis cupiditate saepe neque 
-                illum voluptatum eligendi dicta ab sequi, esse expedita fuga inventore fugit voluptates?</p>
+            <p>{{persona.descripcion}}</p>
         </span>
     </div>
 </div>
