--- a/src/app/components/hardandsoftskills/hardandsoftskills.component.html
+++ b/src/app/components/hardandsoftskills/hardandsoftskills.component.html
@@ -1,116 +1,41 @@
 <div class="row">
+
         <h1>Hard & Soft skills</h1>
-        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-                [percent]="45"
-                [radius]="100"
-                [imageSrc]="'../../../assets/html.png'"
-                [showImage]="true"
-                [showUnits]="false"
-                [imageHeight]="70"
-                [imageWidth]="70"
-                [showSubtitle]="false"
-                [outerStrokeWidth]="16"
-                [innerStrokeWidth]="5"
-                [outerStrokeColor]="'#78C000'"
-                [innerStrokeColor]="'#C7E596'"
-                [animation]="true"
-                [animationDuration]="300"
->       </circle-progress>
+        <div class="col-lg-2">
+            <button type="button" routerLink="/nuevaskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
         </div>
-
-        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                <circle-progress
-                        [percent]="25"
-                        [radius]="100"
-                        [imageSrc]="'../../../assets/CSS.png'"
-                        [showImage]="true"
-                        [showUnits]="false"
-                        [imageHeight]="70"
-                        [imageWidth]="70"
-                        [showSubtitle]="false"
-                        [outerStrokeWidth]="16"
-                        [innerStrokeWidth]="5"
-                        [outerStrokeColor]="'#78C000'"
-                        [innerStrokeColor]="'#C7E596'"
-                        [animation]="true"
-                        [animationDuration]="300"
-        >       </circle-progress>
-                </div>
-
-                <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                        <circle-progress
-                                [percent]="20"
-                                [radius]="100"
-                                [imageSrc]="'../../../assets/js.png'"
-                                [showImage]="true"
-                                [showUnits]="false"
-                                [imageHeight]="70"
-                                [imageWidth]="70"
-                                [showSubtitle]="false"
-                                [outerStrokeWidth]="16"
-                                [innerStrokeWidth]="5"
-                                [outerStrokeColor]="'#78C000'"
-                                [innerStrokeColor]="'#C7E596'"
-                                [animation]="true"
-                                [animationDuration]="300"
-                >       </circle-progress>
-                        </div>
-
-                        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                                <circle-progress
-                                        [percent]="50"
-                                        [radius]="100"
-                                        [imageSrc]="'../../../assets/git.png'"
-                                        [showImage]="true"
-                                        [showUnits]="false"
-                                        [imageHeight]="90"
-                                        [imageWidth]="90"
-                                        [showSubtitle]="false"
-                                        [outerStrokeWidth]="16"
-                                        [innerStrokeWidth]="5"
-                                        [outerStrokeColor]="'#78C000'"
-                                        [innerStrokeColor]="'#C7E596'"
-                                        [animation]="true"
-                                        [animationDuration]="300"
-                        >       </circle-progress>
-                                </div>
-
-                        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                                <circle-progress
-                                         [percent]="65"
-                                         [radius]="100"
-                                                [imageSrc]="'../../../assets/eng.png'"
-                                                [showImage]="true"
-                                                [showUnits]="false"
-                                                [imageHeight]="90"
-                                                [imageWidth]="90"
-                                                [showSubtitle]="false"
-                                                [outerStrokeWidth]="16"
-                                                [innerStrokeWidth]="5"
-                                                [outerStrokeColor]="'#78C000'"
-                                                [innerStrokeColor]="'#C7E596'"
-                                                [animation]="true"
-                                                [animationDuration]="300"
-                                >       </circle-progress>
-                                        </div>
-
-                                        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                                                <circle-progress
-                                                        [percent]="85"
-                                                        [radius]="100"
-                                                        [imageSrc]="'../../../assets/grupal.png'"
-                                                        [showImage]="true"
-                                                        [showUnits]="false"
-                                                        [imageHeight]="90"
-                                                        [imageWidth]="90"
-                                                        [showSubtitle]="false"
-                                                        [outerStrokeWidth]="16"
-                                                        [innerStrokeWidth]="5"
-                                                        [outerStrokeColor]="'#78C000'"
-                                                        [innerStrokeColor]="'#C7E596'"
-                                                        [animation]="true"
-                                                        [animationDuration]="300"
-                                        >       </circle-progress>
-                                                </div>
-</div>
+    
+    
+        <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+            <circle-progress 
+            [percent]="(skill.porcentaje)" 
+            [radius]="90" [imageSrc]="''" 
+            [title]="(skill.nombre)"
+            [titleColor]="'#212F3C'"
+            [showTitle]="true" 
+            [showImage]="false" 
+            [imageHeight]="70" 
+            [imageWidth]="70" 
+            [showUnits]="false"
+            [showSubtitle]="false" 
+            [outerStrokeWidth]="16" 
+            [innerStrokeWidth]="2" 
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'" 
+            [animation]="true" 
+            [animationDuration]="600">
+            </circle-progress>
+    
+            <div>
+                <td *ngIf="isLogged">
+                    <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+                        <i class="bi bi-pencil-fill"></i></button>
+                </td>
+                <td *ngIf="isLogged">
+                    <button class="btn btn-danger" (click)="delete(skill.id)">
+                        <i class="bi bi-trash-fill"></i></button>
+                </td>
+            </div>
+            
+        </div>
+    </div>
