--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -10,7 +10,8 @@
                 <a href=""><img src="/assets/img/linkedin.svg" alt=""></a>
                 <a href=""><img src="/assets/img/fb.svg" alt=""></a>
                 <a href=""><img src="/assets/img/twitter.svg" alt=""></a>
-                <button type="button" class="btn btn-outline-dark">LOGIN</button>
+                <button type="button" class="btn btn-outline-dark" (click)="login()" *ngIf="!isLogged">LOGIN</button>
+                <button type="button" class="btn btn-outline-dark" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
         </div>
 
     </div>
