--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -6,10 +6,10 @@
 
         <div class="redes">
             
-                <a href=""><img src="/assets/img/github.svg" alt=""></a>
+                <a href="https://github.com/Deto94"><img src="/assets/img/github.svg" alt=""></a>
                 <a href=""><img src="/assets/img/linkedin.svg" alt=""></a>
-                <a href=""><img src="/assets/img/fb.svg" alt=""></a>
-                <a href=""><img src="/assets/img/twitter.svg" alt=""></a>
+                <a href="https://www.facebook.com/izacur/"><img src="/assets/img/fb.svg" alt=""></a>
+                <a href="https://twitter.com/i_zacur"><img src="/assets/img/twitter.svg" alt=""></a>
                 <button type="button" class="btn btn-outline-dark" (click)="login()" *ngIf="!isLogged">LOGIN</button>
                 <button type="button" class="btn btn-outline-dark" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
         </div>
