--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="container">
         <div class="logoap">
-            <img src="/assets/img/arg-programa.png" id="logoAP">
+            <img src="/assets/img/APLogo-20-20.png" id="logoAP">
         </div>
 
         <div class="redes">
             
-                <a href="https://github.com/Deto94"><img src="/assets/img/github.svg" alt=""></a>
-                <a href=""><img src="/assets/img/linkedin.svg" alt=""></a>
-                <a href="https://www.facebook.com/izacur/"><img src="/assets/img/fb.svg" alt=""></a>
-                <a href="https://twitter.com/i_zacur"><img src="/assets/img/twitter.svg" alt=""></a>
-                <button type="button" class="btn btn-outline-dark" (click)="login()" *ngIf="!isLogged">LOGIN</button>
-                <button type="button" class="btn btn-outline-dark" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
+                <a href="https://github.com/Deto94"><img src="/assets/img/github-icon.png" width="30px" height="30px"></a>
+                <a href=""><img src="/assets/img/linkedin-icon.png" width="30px" height="30px"></a>
+                <a href="https://www.facebook.com/izacur/"><img src="/assets/img/fb-icon.png" width="30px" height="30px"></a>
+                <a href="https://twitter.com/i_zacur"><img src="/assets/img/tw-icon.png" width="30px" height="30px"></a>
+                <button type="button" class="btn btn-dark" (click)="login()" *ngIf="!isLogged">LOGIN</button>
+                <button type="button" class="btn btn-dark" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
         </div>
 
     </div>
