--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -1,11 +1,23 @@
 .row{
     padding: 20px;
+    
 }
 
 div{
-    background: lightblue;
+    background: white;
 }
 
 h1,h3{
     display: inline;
+    font-weight: bold;
+    font-style: italic;
+    color: #37479e;
+}
+
+.ExpLabTitulo{
+    text-align: center;
+}
+
+.lead{
+    font-size: medium;
 }
