--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
     <!-- Login Form -->
     <form #f="ngForm"(ngSubmit)="onLogin()" novalidate>
       <input type="text" id="nombreUsuario" class="fadeIn second" name="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario" required >
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Contraseña" [(ngModel)]="password" required>
+      <input type="password" id="password" class="fadeIn third" name="password" placeholder="Contraseña" [(ngModel)]="password" required>
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
