--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -1,5 +1,5 @@
 .row {
-    background-color: lightblue;
+    background-color: #dff1ff;
     padding: 20px;
 }
 
@@ -14,4 +14,14 @@
 
 .img-proyecto{
     box-shadow: 10px 10px 30px black;
+}
+
+h1,h3{
+    font-weight: bold;
+    font-style: italic;
+    color: #37479e;
+}
+
+h1{
+    text-align: center;
 }
