--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
             <h3>Anime En Mediafire</h3>
-            <p>Fue un blog que hice basandome en el CMS Wordpress en el año 2011.</p>
+            <p class="lead">Fue un blog que hice basandome en el CMS Wordpress en el año 2011.</p>
         </div>
         <div class= "col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
             <a href="https://animenmediafire.wordpress.com"><img src="../../../assets/animenmediafire.jpg" class="img-fluid img-proyecto"></a>
